Update crates.io categories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ rust-version = "1.59"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/taiki-e/atomic-maybe-uninit"
 keywords = ["atomic"]
-categories = ["concurrency", "data-structures", "embedded", "hardware-support", "no-std"]
+categories = ["concurrency", "embedded", "hardware-support", "no-std", "no-std::no-alloc"]
 exclude = ["/.*", "/tools", "/target-specs"]
 description = """
 Atomic operations on potentially uninitialized integers.
