--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -280,6 +280,12 @@ jobs:
 
   no-std:
     needs: tidy
+    strategy:
+      fail-fast: false
+      matrix:
+        rust:
+          - stable
+          - nightly
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -288,7 +294,19 @@ jobs:
           persist-credentials: false
       - name: Install Rust
         run: rustup toolchain add nightly --no-self-update && rustup default nightly
-      - run: sudo apt-get -o Acquire::Retries=10 -qq update && sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends qemu-system-arm
+      - uses: taiki-e/install-action@cargo-hack
+      - run: |
+          set -euxo pipefail
+          sudo apt-get -o Acquire::Retries=10 -qq update && sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends \
+            qemu-system-arm \
+            qemu-system-misc
+          # APT's qemu package doesn't provide firmware for riscv32: https://packages.ubuntu.com/en/jammy/all/qemu-system-data/filelist
+          OPENSBI_VERSION=1.2
+          curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused "https://github.com/riscv-software-src/opensbi/releases/download/v${OPENSBI_VERSION}/opensbi-${OPENSBI_VERSION}-rv-bin.tar.xz" \
+            | tar xJf -
+          sudo mv "opensbi-${OPENSBI_VERSION}-rv-bin/share/opensbi/ilp32/generic/firmware/fw_dynamic.bin" /usr/share/qemu/opensbi-riscv32-generic-fw_dynamic.bin
+          sudo mv "opensbi-${OPENSBI_VERSION}-rv-bin/share/opensbi/ilp32/generic/firmware/fw_dynamic.elf" /usr/share/qemu/opensbi-riscv32-generic-fw_dynamic.elf
+          rm -rf "opensbi-${OPENSBI_VERSION}-rv-bin"
       - run: tools/no-std.sh
 
   valgrind:
