--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,8 @@ jobs:
             target: i686-unknown-linux-gnu
           - rust: nightly
             target: i686-unknown-linux-gnu
+          - rust: nightly
+            target: hexagon-unknown-linux-musl
           - rust: beta # inline asm for loongarch has been stabilized in Rust 1.72
             target: loongarch64-unknown-linux-gnu
           - rust: nightly
