--- a/tests/no-std-qemu/Cargo.toml
+++ b/tests/no-std-qemu/Cargo.toml
@@ -12,6 +12,7 @@ atomic-maybe-uninit = { path = "../.." }
 
 paste = "1"
 semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
+semihosting-no-std-test-rt = { git = "https://github.com/taiki-e/semihosting.git", rev = "66dee29", features = ["qemu-system"] }
 
 # cfg(target_feature = "mclass") is not available on stable/beta.
 [target.thumbv6m-none-eabi.dependencies]
