--- a/target-specs/riscv32gc-unknown-none-elf.json
+++ b/target-specs/riscv32gc-unknown-none-elf.json
@@ -7,6 +7,7 @@
   "features": "+m,+a,+f,+d,+c",
   "linker": "rust-lld",
   "linker-flavor": "ld.lld",
+  "llvm-abiname": "ilp32d",
   "llvm-target": "riscv32",
   "max-atomic-width": 32,
   "panic-strategy": "abort",
