--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,8 @@ jobs:
             target: aarch64-unknown-linux-gnu
           - rust: nightly
             target: aarch64_be-unknown-linux-gnu
+          - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use stable asm on this target)
+            target: aarch64_be-unknown-linux-gnu
           - rust: '1.59'
             target: armv5te-unknown-linux-gnueabi
           - rust: stable
@@ -93,6 +95,8 @@ jobs:
             target: armv7-unknown-linux-gnueabihf
           - rust: nightly
             target: armeb-unknown-linux-gnueabi
+          - rust: nightly-2022-09-16 # Rust 1.65, LLVM 15 (version that this target was added)
+            target: armeb-unknown-linux-gnueabi
           - rust: '1.59'
             target: i586-unknown-linux-gnu
           - rust: stable
@@ -107,7 +111,9 @@ jobs:
             target: i686-unknown-linux-gnu
           - rust: nightly
             target: hexagon-unknown-linux-musl
-          - rust: beta # inline asm for loongarch has been stabilized in Rust 1.72
+          - rust: '1.72' # inline asm for loongarch has been stabilized in Rust 1.72
+            target: loongarch64-unknown-linux-gnu
+          - rust: stable
             target: loongarch64-unknown-linux-gnu
           - rust: nightly
             target: loongarch64-unknown-linux-gnu
@@ -167,6 +173,8 @@ jobs:
             target: s390x-unknown-linux-gnu
           - rust: nightly-2023-05-09 # Rust 1.71, LLVM 16 (oldest version we can implement atomic RMWs on this target)
             target: s390x-unknown-linux-gnu
+          - rust: '1.59'
+            target: thumbv7neon-unknown-linux-gnueabihf
           - rust: stable
             target: thumbv7neon-unknown-linux-gnueabihf
           - rust: nightly
