--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -44,7 +44,7 @@ aarch64_macos_test_task:
     - set -ex
     - sysctl hw.optional machdep.cpu
     - brew install moreutils
-    - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly
+    - curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly
   test_script:
     - . $HOME/.cargo/env
     - set -ex
