--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,7 +15,7 @@ aarch64_linux_test_task:
   env:
     TARGET: aarch64-unknown-linux-gnu
   arm_container:
-    image: rust:latest
+    image: rust
   setup_script:
     - set -ex
     - lscpu
@@ -39,7 +39,7 @@ aarch64_macos_test_task:
   env:
     TARGET: aarch64-apple-darwin
   macos_instance:
-    image: ghcr.io/cirruslabs/macos-ventura-xcode:latest
+    image: ghcr.io/cirruslabs/macos-ventura-xcode
   setup_script:
     - set -ex
     - sysctl hw.optional machdep.cpu
@@ -57,9 +57,7 @@ aarch64_linux_valgrind_task:
   env:
     TARGET: aarch64-unknown-linux-gnu
   arm_container:
-    # Valgrind support ldxp/stxp on 3.19+: https://valgrind.org/docs/manual/dist.news.html
-    # However, current Debian stable's Valgrind is 3.16: https://packages.debian.org/en/stable/valgrind
-    image: rust:bookworm
+    image: rust
   setup_script:
     - set -ex
     - rustup toolchain add nightly --no-self-update && rustup default nightly
