--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,19 +133,19 @@ jobs:
             target: mips64el-unknown-linux-gnuabi64
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mips64el-unknown-linux-gnuabi64
-          - rust: nightly-2023-07-18 # TODO: https://github.com/rust-lang/rust/pull/112374 broke build-std due to https://github.com/rust-lang/libc/pull/3268 is not released yet
+          - rust: nightly
             target: mipsisa32r6-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mipsisa32r6-unknown-linux-gnu
-          - rust: nightly-2023-07-18 # TODO: https://github.com/rust-lang/rust/pull/112374 broke build-std due to https://github.com/rust-lang/libc/pull/3268 is not released yet
+          - rust: nightly
             target: mipsisa32r6el-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mipsisa32r6el-unknown-linux-gnu
-          - rust: nightly-2023-07-18 # TODO: https://github.com/rust-lang/rust/pull/112374 broke build-std due to https://github.com/rust-lang/libc/pull/3268 is not released yet
+          - rust: nightly
             target: mipsisa64r6-unknown-linux-gnuabi64
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mipsisa64r6-unknown-linux-gnuabi64
-          - rust: nightly-2023-07-18 # TODO: https://github.com/rust-lang/rust/pull/112374 broke build-std due to https://github.com/rust-lang/libc/pull/3268 is not released yet
+          - rust: nightly
             target: mipsisa64r6el-unknown-linux-gnuabi64
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mipsisa64r6el-unknown-linux-gnuabi64
