--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -27,9 +27,9 @@ aarch64_linux_test_task:
     # We test doctest only once with the default build conditions because doctest is slow. Both api-test
     # and src/tests have extended copies of doctest, so this will not reduce test coverage.
     # +lse,+rcpc
-    # Neoverse N1 is ARMv8.2-a but supports ARMv8.3-a LDAPR instructions.
-    # Neoverse N1 is ARMv8.2-a and doesn't support FEAT_LSE2.
-    # FEAT_LSE2 is tested on aarch64 macOS VM.
+    # Neoverse N1 is ARMv8.2-A but supports ARMv8.3-A LDAPR instructions.
+    # Neoverse N1 is ARMv8.2-A and doesn't support FEAT_LSE2.
+    # FEAT_LSE2 is tested on AArch64 macOS VM.
     - RUSTFLAGS="$RUSTFLAGS -C target-feature=+lse,+rcpc" RUSTDOCFLAGS="$RUSTDOCFLAGS -C target-feature=+lse,+rcpc" ./tools/test.sh -vv --tests
 
 aarch64_macos_test_task:
@@ -47,7 +47,7 @@ aarch64_macos_test_task:
     - . $HOME/.cargo/env
     - set -ex
     # macOS is +lse,+lse2 by default
-    # Cirrus CI's aarch64 macOS VM is fast enough, so run ignored tests too.
+    # Cirrus CI's AArch64 macOS VM is fast enough, so run ignored tests too.
     - ./tools/test.sh -vv -- --include-ignored
 
 aarch64_linux_valgrind_task:
