Update CI config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
       - main
       - dev
   schedule:
-    - cron: '0 1 * * *'
+    - cron: '0 2 * * *'
   workflow_dispatch:
 
 env:
@@ -220,7 +220,7 @@ jobs:
         if: matrix.target != ''
       # TODO: LLVM bug: Undefined temporary symbol error when building std.
       - run: echo "RELEASE=--release" >>"${GITHUB_ENV}"
-        if: matrix.target == 'mips-unknown-linux-gnu' || matrix.target == 'mipsel-unknown-linux-gnu'
+        if: startsWith(matrix.target, 'mips-') || startsWith(matrix.target, 'mipsel-')
 
       - run: tools/test.sh -vv $TARGET $DOCTEST_XCOMPILE $BUILD_STD $RELEASE
       # We test doctest only once with the default build conditions because doctest is slow.
