Preliminary RISC-V RV128 support

--- a/tests/no-std-qemu/.cargo/config.toml
+++ b/tests/no-std-qemu/.cargo/config.toml
@@ -22,3 +22,5 @@ runner = "qemu-system-arm -M lm3s6965evb -cpu cortex-m33 -display none -semihost
 runner = "qemu-system-riscv32 -M virt -display none -semihosting -kernel"
 [target.'cfg(all(target_arch = "riscv64", target_os = "none"))']
 runner = "qemu-system-riscv64 -M virt -display none -semihosting -kernel"
+[target.'cfg(all(target_arch = "riscv128", target_os = "none"))']
+runner = "qemu-system-riscv128 -M virt -display none -semihosting -kernel"
