--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ targets = [
     "x86_64-unknown-linux-gnu",
 ]
 
+[package.metadata.cargo_check_external_types]
+# The following are external types that are allowed to be exposed in our public API.
+allowed_external_types = []
+
 [workspace]
 resolver = "2"
 
