--- a/tests/no-std-qemu/Cargo.toml
+++ b/tests/no-std-qemu/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.0.0"
 edition = "2021"
 publish = false
 
-[workspace]
-resolver = "2"
-
 [dependencies]
 atomic-maybe-uninit = { path = "../.." }
 
@@ -29,3 +26,11 @@ cortex-m-rt = "0.7"
 cortex-m-rt = "0.7"
 [target.'thumbv8m.main-none-eabihf'.dependencies]
 cortex-m-rt = "0.7"
+
+[workspace]
+resolver = "2"
+
+[lints.rust]
+rust_2018_idioms = "warn"
+single_use_lifetimes = "warn"
+# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV
