--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -300,6 +300,9 @@ jobs:
         if: startsWith(matrix.target, 's390x')
 
       - run: cargo minimal-versions build --workspace --no-private --detach-path-deps=skip-exact --all-features $TARGET $BUILD_STD $RELEASE
+      - run: cargo minimal-versions build --workspace --no-private --detach-path-deps=skip-exact --all-features $TARGET $BUILD_STD $RELEASE --direct
+        # Old nightly compilers do not support -Z direct-minimal-versions
+        if: matrix.rust == 'nightly'
 
   build:
     needs: tidy
