--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
             target: i686-unknown-linux-gnu
           - rust: nightly
             target: i686-unknown-linux-gnu
-          - rust: nightly
+          - rust: nightly-2024-03-02 # TODO: https://github.com/rust-lang/rust/pull/121666 caused regression
             target: hexagon-unknown-linux-musl
           - rust: nightly-2023-08-23 # The last nightly version that doesn't support MaybeUninit registers.
             target: hexagon-unknown-linux-musl
