ci: Test -Z codegen-backend=cranelift

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,9 @@ jobs:
           - rust: nightly
             flags: -C panic=abort -Z panic_abort_tests
           - rust: nightly
+            # TODO: MaybeUninit register is not supported yet by cranelift, so we need to set --cfg atomic_maybe_uninit_no_asm_maybe_uninit. https://github.com/rust-lang/rustc_codegen_cranelift/issues/1428
+            flags: -Z codegen-backend=cranelift --cfg atomic_maybe_uninit_no_asm_maybe_uninit
+          - rust: nightly
             # target: x86_64-apple-darwin
             os: macos-13
           - rust: nightly
@@ -73,6 +76,10 @@ jobs:
             target: aarch64-unknown-linux-gnu
           - rust: nightly
             target: aarch64-unknown-linux-gnu
+          - rust: nightly
+            target: aarch64-unknown-linux-gnu
+            # TODO: MaybeUninit register is not supported yet by cranelift, so we need to set --cfg atomic_maybe_uninit_no_asm_maybe_uninit. https://github.com/rust-lang/rustc_codegen_cranelift/issues/1428
+            flags: -Z codegen-backend=cranelift --cfg atomic_maybe_uninit_no_asm_maybe_uninit
           - rust: nightly-2024-02-05 # TODO: core_simd bug https://github.com/rust-lang/portable-simd/pull/396
             target: aarch64_be-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use stable asm on this target)
@@ -181,6 +188,11 @@ jobs:
             target: riscv64gc-unknown-linux-gnu
           - rust: nightly
             target: riscv64gc-unknown-linux-gnu
+          # TODO: cranelift doesn't support cfg(target_feature): https://github.com/rust-lang/rustc_codegen_cranelift/issues/1400
+          # - rust: nightly
+          #   target: riscv64gc-unknown-linux-gnu
+          #   # TODO: MaybeUninit register is not supported yet by cranelift, so we need to set --cfg atomic_maybe_uninit_no_asm_maybe_uninit. https://github.com/rust-lang/rustc_codegen_cranelift/issues/1428
+          #   flags: -Z codegen-backend=cranelift --cfg atomic_maybe_uninit_no_asm_maybe_uninit
           - rust: nightly
             target: s390x-unknown-linux-gnu
           - rust: nightly-2024-01-04 # Rust 1.77, LLVM 17 (newest version that does not support reg_addr register class)
