Revert "ci: Pin nightly toolchain for aarch64_be test"
This reverts commit 89bd08b1cdbcadd85e6280b7da870af5576bfb6f.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
             target: aarch64-unknown-linux-gnu
             # TODO: MaybeUninit register is not supported yet by cranelift, so we need to set --cfg atomic_maybe_uninit_no_asm_maybe_uninit. https://github.com/rust-lang/rustc_codegen_cranelift/issues/1428
             flags: -Z codegen-backend=cranelift --cfg atomic_maybe_uninit_no_asm_maybe_uninit
-          - rust: nightly-2024-02-05 # TODO: core_simd bug https://github.com/rust-lang/portable-simd/pull/396
+          - rust: nightly
             target: aarch64_be-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use stable asm on this target)
             target: aarch64_be-unknown-linux-gnu
