tests: Update AVR test to nightly-2024-03-22

--- a/tests/avr/rust-toolchain.toml
+++ b/tests/avr/rust-toolchain.toml
@@ -1,5 +1,6 @@
 [toolchain]
 # channel = "nightly-2022-07-10" # LLVM 14
-channel = "nightly-2023-08-09" # LLVM 17
+# channel = "nightly-2023-08-09" # LLVM 17
+channel = "nightly-2024-03-22" # LLVM 18
 components = ["rust-src"]
 profile = "minimal"
