--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,11 +150,11 @@ jobs:
             target: mips64el-unknown-linux-gnuabi64
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mips64el-unknown-linux-gnuabi64
-          - rust: nightly-2023-07-18 # TODO: hang with LLVM 17
+          - rust: nightly
             target: mipsisa32r6-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mipsisa32r6-unknown-linux-gnu
-          - rust: nightly-2023-07-18 # TODO: hang with LLVM 17
+          - rust: nightly
             target: mipsisa32r6el-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mipsisa32r6el-unknown-linux-gnu
