ci: cranelift bug on MaybeUninit registers in asm has been fixed
https://github.com/rust-lang/rustc_codegen_cranelift/pull/1481

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,7 @@ jobs:
           - rust: nightly
             flags: -C panic=abort -Z panic_abort_tests
           - rust: nightly
-            # TODO: MaybeUninit register is not supported yet by cranelift, so we need to set --cfg atomic_maybe_uninit_no_asm_maybe_uninit. https://github.com/rust-lang/rustc_codegen_cranelift/issues/1428
-            flags: -Z codegen-backend=cranelift --cfg atomic_maybe_uninit_no_asm_maybe_uninit
+            flags: -Z codegen-backend=cranelift
           - rust: nightly
             # target: x86_64-apple-darwin
             os: macos-13
@@ -79,8 +78,7 @@ jobs:
             target: aarch64-unknown-linux-gnu
           - rust: nightly
             target: aarch64-unknown-linux-gnu
-            # TODO: MaybeUninit register is not supported yet by cranelift, so we need to set --cfg atomic_maybe_uninit_no_asm_maybe_uninit. https://github.com/rust-lang/rustc_codegen_cranelift/issues/1428
-            flags: -Z codegen-backend=cranelift --cfg atomic_maybe_uninit_no_asm_maybe_uninit
+            flags: -Z codegen-backend=cranelift
           - rust: nightly
             target: aarch64_be-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use stable asm on this target)
@@ -192,8 +190,7 @@ jobs:
           # TODO: cranelift doesn't support cfg(target_feature): https://github.com/rust-lang/rustc_codegen_cranelift/issues/1400
           # - rust: nightly
           #   target: riscv64gc-unknown-linux-gnu
-          #   # TODO: MaybeUninit register is not supported yet by cranelift, so we need to set --cfg atomic_maybe_uninit_no_asm_maybe_uninit. https://github.com/rust-lang/rustc_codegen_cranelift/issues/1428
-          #   flags: -Z codegen-backend=cranelift --cfg atomic_maybe_uninit_no_asm_maybe_uninit
+          #   flags: -Z codegen-backend=cranelift
           - rust: nightly
             target: s390x-unknown-linux-gnu
           - rust: nightly-2024-01-04 # Rust 1.77, LLVM 17 (newest version that does not support reg_addr register class)
