--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ targets = [
 
 [package.metadata.cargo_check_external_types]
 # The following are external types that are allowed to be exposed in our public API.
-allowed_external_types = []
+allowed_external_types = [
+]
 
 [lib]
 doc-scrape-examples = false
@@ -49,6 +50,30 @@ improper_ctypes_definitions = "warn"
 non_ascii_idents = "warn"
 rust_2018_idioms = "warn"
 single_use_lifetimes = "warn"
+unexpected_cfgs = { level = "warn", check-cfg = [
+    "cfg(target_pointer_width,values(\"128\"))",
+    # Known custom cfgs, excluding those that may be set by build script.
+    # Not public API.
+    "cfg(qemu,valgrind)",
+    # Public APIs, considered unstable unless documented in readme.
+    # arm: Use cp15_barrier instead of __kuser_memory_barrier on ARMv6 Linux/Android.
+    # ARMv6 binaries compiled with this cfg may cause problems when run on ARMv7+ chips:
+    # https://github.com/rust-lang/rust/issues/60605
+    "cfg(atomic_maybe_uninit_use_cp15_barrier)",
+    # x86: Assume CPU does not have CMPXCHG8B instruction.
+    # This is a cfg for compatibility with 80486/80386, but
+    # note that LLVM does not support those CPUs well:
+    # https://reviews.llvm.org/D18802
+    # This cannot be supported by automatic detection in the build script,
+    # since rustc does not have a target feature to indicate this, and targets
+    # beginning with i386- may actually be i686 (e.g., i386-apple-ios)
+    # https://github.com/rust-lang/rust/blob/1.78.0/compiler/rustc_target/src/spec/base/apple/mod.rs#L72
+    "cfg(atomic_maybe_uninit_no_cmpxchg8b)",
+    # x86: Assume CPU does not have CMPXCHG instruction.
+    # This is a cfg for compatibility with 80386.
+    # See atomic_maybe_uninit_no_cmpxchg8b for details.
+    "cfg(atomic_maybe_uninit_no_cmpxchg)",
+] }
 unreachable_pub = "warn"
 # unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV
 [workspace.lints.clippy]
@@ -66,12 +91,13 @@ borrow_as_ptr = { level = "allow", priority = 1 } # https://github.com/rust-lang
 declare_interior_mutable_const = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/7665
 doc_markdown = { level = "allow", priority = 1 }
 float_cmp = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/7725
+incompatible_msrv = { level = "allow", priority = 1 } # buggy: doesn't consider cfg, https://github.com/rust-lang/rust-clippy/issues/12280, https://github.com/rust-lang/rust-clippy/issues/12257#issuecomment-2093667187
 lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12270
 manual_assert = { level = "allow", priority = 1 }
 manual_range_contains = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/6455#issuecomment-1225966395
 missing_errors_doc = { level = "allow", priority = 1 }
 module_name_repetitions = { level = "allow", priority = 1 }
-nonminimal_bool = { level = "allow", priority = 1 } # buggy https://github.com/rust-lang/rust-clippy/issues?q=is%3Aissue+is%3Aopen+nonminimal_bool
+nonminimal_bool = { level = "allow", priority = 1 } # buggy: https://github.com/rust-lang/rust-clippy/issues?q=is%3Aissue+is%3Aopen+nonminimal_bool
 similar_names = { level = "allow", priority = 1 }
 single_match = { level = "allow", priority = 1 }
 single_match_else = { level = "allow", priority = 1 }
