Simplify dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,10 @@
 version: 2
 updates:
   - package-ecosystem: cargo
-    directory: /
+    directories:
+      - /
+      # crates with [workspace] table are not recognized by the above 'directory: /'
+      - /tests/no-std-qemu
     schedule:
       interval: daily
     commit-message:
@@ -9,14 +12,6 @@ updates:
     ignore:
       # For test on old rustc.
       - dependency-name: crossbeam-utils
-    labels: []
-  # crates with [workspace] table are not recognized by the above 'directory: /'
-  - package-ecosystem: cargo
-    directory: /tests/no-std-qemu
-    schedule:
-      interval: daily
-    commit-message:
-      prefix: ''
     labels: []
   - package-ecosystem: github-actions
     directory: /
